# mlb-digest-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  check.sh  config.toml  init.sh  pyproject.toml
.claude-kb/: README.md
.claude/skills/email-check/: SKILL.md
.github/workflows/: ci.yml  digest.yml
docs/: user-guide.md
docs/decisions/: 0001-teams-as-typed-python-module.md  0002-gmail-ios-dark-mode-blend-mode-hack.md  0003-architecture-tests-as-enforcement-layer.md  0004-docs-plans-is-read-only-history.md  0005-agent-harness-sizing.md  README.md
docs/plans/: 2026-03-14-braves-daily-digest-design.md  2026-03-14-mlb-digest-implementation.md  2026-04-04-multi-team-support.md  CODE_IMPROVEMENT_PLAN.md  MULTI_TEAM_PLAN.md
docs/plans/multi-team-files/: cli.py  config.py  config.toml  narrator.py  teams_registry.py  templates.py  test_teams_registry.py
docs/plans/multi-team-files/example_configs/: config_cubs_custom.toml  config_dodgers.toml  config_yankees.toml
docs/superpowers/plans/: 2026-04-19-harness-patterns.md  2026-07-15-email-verify-loop.md
docs/superpowers/specs/: 2026-04-19-harness-patterns-design.md  2026-07-15-email-verify-loop-and-code-review-design.md
graphify-out/: .last-sha
src/mlb_digest/: __init__.py  cli.py  config.py  emailer.py  feeds.py  mlb_api.py  narrator.py  preview.py  sample_digest.md  teams_registry.py  templates.py
tests/: conftest.py  test_architecture.py  test_cli.py  test_config.py  test_emailer.py  test_feeds.py  test_integration.py  test_live_api.py  test_mlb_api.py  test_narrator.py  test_preview.py  test_teams_registry.py  test_templates.py
tests/fixtures/: mlb_feed.xml  team_feed.xml
