[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-digest-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "MLB-StatsAPI>=1.9.0",
    "anthropic>=0.40.0",
    "feedparser>=6.0",
    "click>=8.1",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-Markdown>=3.6",
]

[project.scripts]
mlb-digest = "mlb_digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
